-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.9.0-beta1
-
QC 4.9rc snapshot, Qt5.12.2 for android, Qt5.9 for Desktop
-
-
c70f59075d416a88f43b193190ad1fa2f81aa0cc (qt-creator/qt-creator/4.9)
Steps to reproduce:
- if Android: have a valid Qt / SDK / NDK setup and a device at hand
- if on Desktop have a valid Qt at hand
- create a Quick Application from template (if necessary add some code to generated event data..)
- start profiling
- if on Android: use the device internal mechanism to "close" the app
- if on Desktop: kill the app with -9
Current result:
- I'm not getting data (except for some Debug Messages I've created with console.log())
Note: using the "Stop" button from the Qml Profiler tool bar works fine and gets all the data as expected.
For Gerrit Dashboard: QTCREATORBUG-22187 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
258567,2 | QmlProfiler: If disconnected while serverRecording, show warning | 4.9 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |